--- a/templates/index.html
+++ b/templates/index.html
@@ -123,13 +123,13 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.youtube.com/channel/UCqrILQNl5Ed9Dz6CGMyvMTQ" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.codeacademy.com" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="https://www.google.com.mx/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwjG24awpMLZAhVSS60KHYo1AFgQjRx6BAgAEAY&url=https%3A%2F%2Fwww.webdesignerdepot.com%2F2016%2F05%2F9-reasons-hand-coding-always-beats-site-builders%2F&psig=AOvVaw2amlbeMB8OjfHKxvpqbxw8&ust=1519689943876946" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
