--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://www.google.com.mx/imgres?imgurl=https://static.interestingengineering.com/images//sizes/coding_channels_resize_xs.jpg&imgrefurl=https://interestingengineering.com/best-youtube-channels-coding-programming&h=157&w=300&tbnid=wZekxyLixziBiM:&tbnh=157&tbnw=300&usg=___nnRfEyemC7QuaE_FUNcXWxBP7w%3D&vet=1&docid=TQOqiBUisPNDWM#h=157&imgdii=PL1qyIVUSsWY5M:&tbnh=157&tbnw=300&vet=1&w=300" class="img-responsive" alt="Circus tent">
+                        <img src="http://www.clubhousenews.com/wp-content/uploads/2014/03/kid-coders.jpg" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>      
             </div>
