--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/chesstastic.jpeg" target="_blank" class="img-responsive" alt="Chesstastic">
+                        <img src="https://media.licdn.com/mpr/mpr/p/1/005/0af/3b7/276e9b6.jpg" target="_blank" class="img-responsive" alt="Chesstastic">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
