--- a/templates/index.html
+++ b/templates/index.html
@@ -150,7 +150,7 @@
                     <p>Hello, my name is Max Righi, I’m a web developer and freelancer specialized in python 3 as my main algorithmic language.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>The languages that you see on this app are HTML, CSS, Python and some JavaScript. By using this BootStrap template I saved myself a lot of time. Instead of creating the HTML and CSS from scratch I was able to edit the template to the way I wanted it to look like.</p>
+                    <p>The languages you see in this page are html, Python, CSS and some JavaScript. At the moment, I’m automatizing several companies and developing numerous apps.</p>
                 </div>
             </div>
         </div>
