--- a/templates/code.html
+++ b/templates/code.html
@@ -8,7 +8,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="https://libuntu.files.wordpress.com/2015/09/python-logo.jpg" alt="">
+                    <img class="img-responsive" src="/static/img/python.jpeg" alt="">
                     <div class="intro-text">
                         <h1 class="name">Simple Python Apps</h1>
                         <hr class="star-light">
