--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="http://www.tobanelli.it/wp-content/uploads/2012/11/righi_logo.jpg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
-                        <h1 class="name">Hey there you are in Max Righi first app {{name}}!</h1>
+                        <h1 class="name">Hey there you are in Max Righi's first app {{name}}!</h1>
                         <hr class="star-light">
                         <span class="skills">Python Developer - Flask Framework</span>
                     </div>
